--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@ __pycache__/
 *$py.class
 *.so
 .Python
-env/
 build/
 develop-eggs/
 dist/
@@ -16,12 +15,14 @@ lib64/
 parts/
 sdist/
 var/
+wheels/
 *.egg-info/
 .installed.cfg
 *.egg
 
 # Virtual Environment
 venv/
+env/
 ENV/
 
 # IDE
@@ -30,15 +31,17 @@ ENV/
 *.swp
 *.swo
 
+# Logs
+logs/
+*.log
+
+# Configuration
+config/config.ini
+.env
+
 # Database
 *.db
 *.sqlite3
-
-# Environment variables
-.env
-
-# Logs
-*.log
 
 # OS
 .DS_Store
