--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-flask==2.0.1
-python-ldap==3.4.0
-ldap3==2.9.1
-python-dotenv==0.19.0
-flask-login==0.5.0
-flask-wtf==0.15.1
-flask-sqlalchemy==2.5.1
-werkzeug==2.0.1
-email-validator==1.1.3 
+python-ldap3>=2.9.1
+Jinja2>=3.1.2
+PyQt6>=6.4.0
+configparser>=5.3.0
+pandas>=2.0.0
+openpyxl>=3.1.2
+cryptography>=41.0.0
+logging>=0.5.1.2
+python-dotenv>=1.0.0 
