--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,44 @@
-python-ldap3>=2.9.1
-Jinja2>=3.1.2
-PyQt6>=6.4.0
-configparser>=5.3.0
-pandas>=2.0.0
-openpyxl>=3.1.2
-cryptography>=41.0.0
-logging>=0.5.1.2
-python-dotenv>=1.0.0 
+# Web Framework
+Flask==2.3.3
+Flask-SQLAlchemy==3.1.1
+Flask-Login==0.6.2
+Flask-WTF==1.2.1
+
+# Database
+SQLAlchemy==2.0.23
+alembic==1.12.1
+
+# GUI
+PyQt6==6.5.2
+PyQt6-Qt6==6.5.2
+PyQt6-sip==13.5.2
+
+# Active Directory
+python-ldap3==2.9.1
+
+# Template Engine
+Jinja2==3.1.2
+
+# Configuration
+python-dotenv==1.0.0
+configparser==5.3.0
+
+# Data Processing
+pandas==2.1.1
+openpyxl==3.1.2
+
+# Security
+cryptography==41.0.3
+PyJWT==2.8.0
+
+# Logging
+logging==0.5.1.2
+
+# Testing
+pytest==7.4.2
+pytest-qt==4.2.0
+
+# Development Tools
+black==23.9.1
+flake8==6.1.0
+isort==5.12.0 
